updated code to use PG
